--- a/Project/styles/styleCharge.css
+++ b/Project/styles/styleCharge.css
@@ -17,6 +17,19 @@ body, .cubo, .loading{
     height: 190px;
 }
 
+button{
+    background: #0fb42b;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px 40px;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+a{
+    text-decoration: none;
+    color: #F1FFFA;
+}
+
 .cubo{
     height: 60%;
     transform-style: preserve-3d;
