--- a/Project/styles/styleMainPages.css
+++ b/Project/styles/styleMainPages.css
@@ -56,14 +56,16 @@ header{
     font-size: 16px;
     color: #F1FFFA;
     text-transform: uppercase;
+    padding: 5px;
+    border-radius: 10px;
 }
 
 .menu ul li a:hover{
     color: #F1FFFA;
-    background: linear-gradient(to right, #090909, #3C760C);
-    border-radius: 50px;
+    background: linear-gradient(to right, #090909, #0fb42b);
+    border-radius: 10px;
     transition: all 1s;
-    padding: 10px;
+    padding: 6px;
 }
 
 /*COVER*/
@@ -71,7 +73,7 @@ header{
 .container-cover{
     max-width: 100%;
     height: 800px;
-    background-image: url(../Project/images/background-main-2.jpg);
+    background-image: url(../images/background-main-2.jpg);
     background-position: right;
     background-repeat: no-repeat;
 }
@@ -111,7 +113,7 @@ header{
     border-radius: 50px;
     margin-top: 40px;
     color: #F1FFFA;
-    background: linear-gradient(to right, #090909, #3C760C);
+    background: linear-gradient(to right, #090909, #0fb42b);
     cursor: pointer;
     box-shadow: 1px 1px 30px -12px #3C760C;
 }
