mensaje de alerta ya funcionando en user.php

--- a/dreambucks/styles/user.css
+++ b/dreambucks/styles/user.css
@@ -2,10 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif; 
- }
+}
 
- body{
+body{
+     font-family: 'Open Sans', sans-serif; 
     background: #CCFCCB;
 }
 
@@ -35,12 +35,24 @@
     padding: 150px 10% 20px;
 }
 
-.Advertencia{
-    color: white;
+.bad{
+    font-family:'Courier New', Courier, monospace; 
+    margin-left: -15px;
     background-color: red;
-    display:inline;
-    padding: 2rem 0;
+    color: white;
+    padding: 1rem ;
+    width: 100%;
+    margin-bottom: 1em;
+    border-radius: 10px;
 }
+
+.alert{
+    margin: 25px;
+    text-align: center;
+    float: left;
+    flex-direction : row;
+}
+
 .text{
     display:inline;
     padding: 2rem 0;
