--- a/styles/styleUser.css
+++ b/styles/styleUser.css
@@ -59,9 +59,10 @@ body{
 }
 
 .pay{
+    margin-left: -.4em;
+    margin-top: .1em;
+    padding: 5px;
     font-size: 16px;
-    width: 80px;
-    height: 40px;
     background:  #F1FFFA;
     border: 1px solid #F1FFFA;
     color: black;
@@ -76,19 +77,6 @@ body{
     transition:all .5s;
 }
 
-.pay2{
-    font-size: 16px;
-    width: 80px;
-    height: 40px;
-    text-decoration: none;
-    color: black;
-    padding: 10px;
-}
-.pay2:hover{
-    background: #40c440;
-    color: white;
-    transition:all .5s;
-}
 
 .buttowon{
     padding: 15px 20px;
