copia de seguridad (no he modificado casi nada pero para que arriesgarse)

--- a/styles/styleAmortizationTable.css
+++ b/styles/styleAmortizationTable.css
@@ -1,5 +1,5 @@
 .amortization{
-    margin: 20px 25px 20px 125px;
+    margin-top: 125px;
     width: 450px;
     border-radius: 10px;
     border: 1px solid #3C760C;
