--- a/styles/styleUser.css
+++ b/styles/styleUser.css
@@ -1,9 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,400&display=swap');
 
+:root{
+    --cremamenta: #F1FFFA;
+    --verdete: #CCFCCB;
+    --verdesalvia: #3C760C;
+    --negro: #090909;
+    --ocre: #64554E;
+    --verde: #0fb42b;
+    --fuente: Arial, Helvetica, sans-serif;
+    --superverde: #4bf745;
+}
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
 }
 html{
     box-sizing: border-box;
@@ -14,32 +26,36 @@ html{
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    *font-family: 'Open Sans', sans-serif;
     *background-color: var(--negro);
-    background-image: url('../images/');
+    background: linear-gradient(to right, var(--negro), purple);
 
 }
 
 .container_a {
     margin-top: 2em;
-    margin-bottom: 1em;
+    margin-bottom: 9.5em;
     margin-left: 10%;
     width: 35%;
+    height: 380px;
     border-radius: 10px;
-    border: 2px solid #3C760C;
-    background: #ffffff;
+    border: 4px solid var(--verde);
+    background: linear-gradient(to right, var(--verde), var(--superverde));
     padding: 1% 1.2% 0% 1%;
-    color:black;
+    color:var(--negro);
+    font-weight: bold;
     float: left;
     flex-direction: row;
     text-align: left;
     text-size-adjust: initial;
+    transition: all .3s;
 }
 
 
 .container_a:hover {
-    box-shadow: 0px 8px 32px #3C760C;
-    transition: all .3s;
+    margin-top: 2.0em;
+    box-shadow: 0px 8px 32px var(--verde);
+    background-color: var(--verdete);
 }
 
 
@@ -49,8 +65,16 @@ body {
 }
 
 .advertisements {
+    align-items: center;
     margin-top: 10%;
-    margin-left: 10%;
+    margin-left: 35%;
+    height: 120px;
+    width: 500px;
+    background: linear-gradient(to right, purple, var(--verde));
+    border: 5px solid var(--negro);
+    border-radius: 20px;
+    text-align: center;
+    transition: all .3s;
     /*
     padding: 8em 8em 1em;
     */
@@ -81,13 +105,20 @@ body {
 
 .cadabra {
     padding-top: 2em;
-    margin-left: -.9rem;
-
+    *margin-left: -.9rem;
     float: left;
     flex-direction: row;
     text-align: left;
     text-size-adjust: initial;
+    display: flex;
+    justify-content: space-between;
 }
+
+button{
+    margin-left: 20px;
+    background-color: var(--verde);
+}
+
 .cadabra_2 {
     padding-top: 2.02em;
     margin-right: -1.2rem;
@@ -100,23 +131,25 @@ ul, ol{
 
 .boton li a{
     border: 0px solid;
-    border-radius: 0px 10px 0px 6px;
-    background-color: #3C760C;
+    border-radius: 10px;
+    background-color: var(--verdesalvia);
     color: #ffffff;
     text-decoration: none;
     padding: 11px 15px;
+    margin-left: 20px;
     display: block;
 }
+
 .boton li a:hover{
     border: 0px solid;
-    border-radius: 0px 10px 0px 0px;
+    border-radius: 10px;
     background-color: #40c440;
 }
 
 .pr{
     border: 0px solid;
     border-radius: 0px 0px 6px 6px;
-    background-color: #40c440;
+    background-color: var(--verde);
     color: #ffffff;
     text-decoration: none;
     padding: 10px 15px;
